# death_by_attributes

./: .gitignore  Cargo.toml  README.md
attributes_macro/: Cargo.toml
attributes_macro/src/: lib.rs
benches/: attribute_bench.rs  bench_systems.rs  continuous_effect.rs
examples/: access.rs  feathers.rs  proto.rs  simple.rs  test.rs  tree.rs
src/: abilities.rs  actors.rs  assets.rs  attribute_clamp.rs  attributes.rs  condition.rs  conditions.rs  context.rs  effect.rs  effects.rs  evaluator.rs  evaluators.rs  events.rs  graph.rs  lib.rs  math.rs  meta_modifiers.rs  modifiers.rs  mutator.rs  schedule.rs  stacks.rs  systems.rs
src/ability/: abilities.rs  builder.rs  command.rs  mod.rs  system_param.rs  systems.rs
src/attribute/: clamps.rs  mod.rs
src/condition/: conditions.rs  evaluator.rs  mod.rs  systems.rs
src/effect/: application.rs  builder.rs  execution.rs  global_effect.rs  mod.rs  stacks.rs  targeting.rs  timing.rs
src/evaluators/: fixed.rs  meta.rs  mod.rs
src/expression/: attribute.rs  float.rs  integer.rs  math.rs  mod.rs
src/inspector/: debug_overlay.rs  mod.rs  test.rs
src/modifier/: attribute_modifier.rs  calculator.rs  collector.rs  derived_modifier.rs  events.rs  mod.rs  modifier.rs
src/modifiers/: meta.rs  mod.rs  mutator.rs  scalar.rs
src/mutators/: meta.rs  mod.rs  mutator.rs
src/registry/: ability_registry.rs  actor_registry.rs  effect_registry.rs  mod.rs
src/trigger/: builder.rs  mod.rs
tests/: test_systems.rs
