[package]
name = "root_attribute"
version = "0.1.0"
edition = "2024"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Add this to your Cargo.toml
[profile.release]
codegen-units = 1
debug = true

[dependencies]
attributes_macro = { path = "attributes_macro" }
rand = "0.9"
ptree = "0.5"
bevy_egui = "0.36"
bevy-inspector-egui = "0.32"
disqualified = "1.0"
petgraph = "0.8.2"

[dependencies.bevy]
version = "0.16"
default-features = false
features = [
    "bevy_log",
]

[dev-dependencies]
criterion = { version = "0.7", features = ["html_reports"] }
bevy_dev_tools = "0.16"

[dev-dependencies.bevy]
version = "0.16"
default-features = true
features = [
    "bevy_core_pipeline",
    "bevy_log",
    "bevy_state",
    "bevy_ui",
    "default_font",
    "dynamic_linking",
    "bevy_ui_debug",
]

[[bench]]
name = "bench_systems"
harness = false
