[package]
name = "vitality"
version = "0.1.0"
edition = "2024"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Add this to your Cargo.toml
[profile.release]
codegen-units = 1
debug = true

[dependencies]
rand = "0.9"
ptree = "0.5"
bevy_egui = "0.39"
bevy-inspector-egui = "0.36"
petgraph = "0.8"
serde = "1.0"
serde_json = "1.0"
num-traits = "0.2"
smol_str = "0.2.2"
express-it = { path = "../express-it" }

[dependencies.bevy]
version = "0.18"
default-features = false
features = [
    "bevy_log",
]

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
bevy_dev_tools = "0.18"

[dev-dependencies.bevy]
version = "0.18"
default-features = true
features = [
    "bevy_core_pipeline",
    "bevy_log",
    "bevy_state",
    "bevy_ui",
    "default_font",
    "dynamic_linking",
    "bevy_ui_debug",
    "experimental_bevy_feathers",
    "experimental_bevy_ui_widgets",
]

[[bench]]
name = "bench_systems"
harness = false
